Colaboratory를 통해 생성됨

--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -3398,7 +3398,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 각 모델 처리 속도 비교"
+        "# 각 모델 inference time 비교"
       ],
       "metadata": {
         "id": "YGMM9KrQiumK"
@@ -3520,6 +3520,22 @@
       ],
       "metadata": {
         "id": "iZGQYCKaV-KG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.plot(novel_vit_inference_time, label = \"novel_vit_inference_time\", color = 'black')\n",
+        "plt.plot(csps_vit_inference_time, label = \"csps_vit_inference_time\", color = 'blue')\n",
+        "plt.plot(lite_vit_inference_time, label = \"lite_vit_inference_time\", color = 'red')\n",
+        "plt.plot(csps2_vit_inference_time, label = \"csps2_vit_inference_time\", color = 'skyblue')\n",
+        "plt.legend(loc = 0)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "-piLpKSsXN2W"
       },
       "execution_count": null,
       "outputs": []
